--- a/Air strike 2D.CSharp.csproj
+++ b/Air strike 2D.CSharp.csproj
@@ -78,10 +78,12 @@
     <Compile Include="Assets\Done\Done_Scripts\Done_PlayerController.cs" />
     <Compile Include="Assets\Done\Done_Scripts\Done_RandomRotator.cs" />
     <Compile Include="Assets\Done\Done_Scripts\Done_WeaponController.cs" />
+    <Compile Include="Assets\Scripts\BGScroller.cs" />
     <Compile Include="Assets\Scripts\BoundController.cs" />
     <Compile Include="Assets\Scripts\DestoryByContact.cs" />
     <Compile Include="Assets\Scripts\DestroyByTime.cs" />
     <Compile Include="Assets\Scripts\GameController.cs" />
+    <Compile Include="Assets\Scripts\HealthRecover.cs" />
     <Compile Include="Assets\Scripts\Mover.cs" />
     <Compile Include="Assets\Scripts\PlayerConcotroller.cs" />
     <Compile Include="Assets\Scripts\RandomRotater.cs" />
